# aioeos

./: .coveragerc  .gitignore  .readthedocs.yml  LICENSE  README.md  docker-compose.yml  ensure_eosio.sh  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: docscheck.yml  pythonpackage.yml  pythonpublish.yml
aioeos/: __init__.py  account.py  exceptions.py  keys.py  rpc.py  serializer.py  types.py
aioeos/contracts/: eosio.py  eosio_token.py
aioeos/types/: __init__.py  abi.py  authority.py  transaction.py
docs/source/: api.rst  changelog.rst  conf.py  index.rst  introduction.rst
tests/: conftest.py  eosio_abi.json  test_account.py  test_contracts.py  test_keys.py  test_real_rpc.py  test_rpc.py  test_serialize.py  test_tx_flow.py
tests/contracts/: __init__.py  fake.py
