[tool.poetry]
name = "aioeos"
version = "1.0.0"
description = "Async library for interacting with EOS.io blockchain"
authors = ["Maciej Janiszewski <maciej@ulam.io>"]
license = "MIT"
readme = "README.md"
homepage = "https://ulam.io/"
repository = "https://github.com/ulamlabs/aioeos"
documentation = "https://aioeos.readthedocs.io/en/latest/"
keywords = ["blockchain", "eos", "async", "eosio", "cryptocurrency"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.3.1"
base58 = "^1.0.3"
ecdsa = "0.13.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pytest = "^5.4.1"
sphinx = "^2.4.4"
sphinx_rtd_theme = "^0.4.3"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
